--- a/404.html
+++ b/404.html
@@ -1,6 +1,7 @@
 ---
 permalink: /404.html
 layout: default
+search_exclude: true
 ---
 
 <style type="text/css" media="screen">
@@ -19,6 +20,6 @@ layout: default
 
 <div class="container">
   <h1>404</h1>
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
+  <p><strong>Requested Page not found :(</strong></p>
+  <p>Go to <a href="https://rahulbakshee.github.io/iWriteHere">Home Page</a></p>
 </div>
