--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,8 @@ layout: default
 
 
 	<p></p>
-	<p>If you are doing exciting work and recruiting contact me at email: rhlbks AT gmail.com :)</p>
+	<p>contact me if you are doing exciting work and recruiting </p>
+	<p>email: rahul.bakshee@gmail.com </p>
+
   <p></p>
 </div>
