--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,14 @@ layout: default
 	<p></p>
 	<p>contact me if you are doing exciting work and recruiting </p>
 	<p>email: rahul.bakshee@gmail.com </p>
+	
+	<a href="https://github.com/rahulbakshee" target="_blank">
+            <img src="{{ '/images/logo_github.png' | relative_url }}" />
+        </a>
+	
+	<a href="https://www.linkedin.com/in/rahulbakshee/" target="_blank">
+            <img src="{{ '/images/logo_linkedin.png' | relative_url }}" />
+        </a>
 
   <p></p>
 </div>
