--- a/contact.html
+++ b/contact.html
@@ -6,15 +6,22 @@ layout: default
 
 
 	<p></p>
-	<p>contact me if you are doing exciting work and recruiting </p>
-	<p>email: rahul.bakshee@gmail.com </p>
-	
+	<p>I am a Data Scientist working on solving problems using Machine Learning, Deep Learning. </p>
+	<p>I have a huge interest in Computer Vision and see myself working on cool applicationsin such as Autonomous Vehicles</p>
+	<p></p>
+	<p>Contact me if you are doing exciting work and/or recruiting </p>
+	<p></p>
+	<p></p>
 	<a href="https://github.com/rahulbakshee" target="_blank">
             <img src="{{ '/images/logo_github.png' | relative_url }}" />
         </a>
-	
+	<p></p>
 	<a href="https://www.linkedin.com/in/rahulbakshee/" target="_blank">
             <img src="{{ '/images/logo_linkedin.png' | relative_url }}" />
+        </a>
+	
+	<a href="mailto:rahul.bakshee@gmail.com" target="_blank">
+            <img src="{{ '/images/logo_mail.png' | relative_url }}" />
         </a>
 
   <p></p>
