--- a/contact.html
+++ b/contact.html
@@ -6,23 +6,27 @@ layout: default
 
 
 	<p></p>
-	<p>I am a Data Scientist working on solving problems using Machine Learning, Deep Learning. </p>
-	<p>I have a huge interest in Computer Vision and see myself working on cool applicationsin such as Autonomous Vehicles</p>
+	<p>I am a Data Scientist working on solving real world problems using Machine Learning and Deep Learning.</p>
+	<p>I have a huge interest in Computer Vision. I keep myself busy in learning and implementing tools and techniques. In near future I see myself working on cool applicationsin such as Autonomous Vehicles</p>
 	<p></p>
 	<p>Contact me if you are doing exciting work and/or recruiting </p>
-	<p></p>
+	
+	<a href="mailto:rhlbks@gmail.com" target="_blank">
+        <img src="{{ '/images/logo_mail.png' | relative_url }}" />
+        </a>
 	<p></p>
 	<a href="https://github.com/rahulbakshee" target="_blank">
-            <img src="{{ '/images/logo_github.png' | relative_url }}" />
+        <img src="{{ '/images/logo_github.png' | relative_url }}" />
         </a>
 	<p></p>
 	<a href="https://www.linkedin.com/in/rahulbakshee/" target="_blank">
             <img src="{{ '/images/logo_linkedin.png' | relative_url }}" />
         </a>
-	
-	<a href="mailto:rahul.bakshee@gmail.com" target="_blank">
-            <img src="{{ '/images/logo_mail.png' | relative_url }}" />
+	<p></p>
+	<a href="https://twitter.com/rahulbakshee" target="_blank">
+            <img src="{{ '/images/logo_twitter.png' | relative_url }}" />
         </a>
+		
 
   <p></p>
 </div>
