--- a/contact.html
+++ b/contact.html
@@ -7,8 +7,8 @@ layout: default
         </a>
 
 	<p></p>
-	<p>I am a Data Scientist working on solving real world problems using Machine Learning and Deep Learning. I have a huge interest in Computer Vision. I keep myself busy in learning and implementing tools and techniques. In near future I see myself working on some cool applicationsin such as Autonomous Vehicles or GAN(Generative Adversarial Networks)  based consumer applications</p>
-	<p>I am a father and a loving husband. I trek a lot and love travelling. I play badminton on weekends </p>
+	<p>I am a Data Scientist working on solving real world problems using Machine Learning and Deep Learning. I have a huge interest in Computer Vision. I keep myself busy in learning and implementing tools and techniques. In near future I see myself working on some cool applicationsin such as Autonomous Vehicles or GAN(Generative Adversarial Networks) based consumer applications etc.</p>
+	<p>I am a father and a loving husband. I trek a lot and I love travelling. I play badminton on weekends.  </p>
 	<p></p>
 	
 	<p>Contact me if you are doing exciting work and/or recruiting </p>
@@ -17,7 +17,7 @@ layout: default
 	<a href="mailto:rhlbks@gmail.com" target="_blank">
         <img src="{{ '/images/logo_mail.png' | relative_url }}" />
         </a>
-	
+	<a> </a>
 	<a href="https://github.com/rahulbakshee" target="_blank">
         <img src="{{ '/images/logo_github.png' | relative_url }}" />
         </a>
