--- a/contact.html
+++ b/contact.html
@@ -7,25 +7,22 @@ layout: default
         </a>
 
 	<p></p>
-	<p>I am a Data Scientist working on solving real world problems using Machine Learning and Deep Learning. I have a huge interest in Computer Vision. I keep myself busy in learning and implementing tools and techniques. In near future I see myself working on some cool projects such as Autonomous Vehicles, Healthcare or other consumer applications.</p>
+	<p>I am a Data Scientist working on solving real world problems using Machine Learning and Deep Learning. I have a huge interest in Computer Vision. I keep myself busy in learning and implementing new tools and techniques. In the near future I would like to see myself working on some cool projects such as Autonomous Vehicles, consumer applications in Healthcare, .</p>
 	<p>I am a father and a loving husband. I trek a lot and I love travelling. I play badminton on weekends.  </p>
 	<p></p>
-	
+	<p></p>
 	<p>Contact me if you are doing exciting work and/or recruiting </p>
 	<p></p>
-	
-	<a href="mailto:rhlbks@gmail.com" target="_blank">
-        <img src="{{ '/images/logo_mail.png' | relative_url }}" />
-        </a>
-	<a> </a>
+	<p></p>
+
 	<a href="https://github.com/rahulbakshee" target="_blank">
         <img src="{{ '/images/logo_github.png' | relative_url }}" />
         </a>
-	
+	<a> </a>
 	<a href="https://www.linkedin.com/in/rahulbakshee/" target="_blank">
             <img src="{{ '/images/logo_linkedin.png' | relative_url }}" />
         </a>
-	
+	<a> </a>
 	<a href="https://twitter.com/rahulbakshee" target="_blank">
             <img src="{{ '/images/logo_twitter.png' | relative_url }}" />
         </a>
