--- a/contact.html
+++ b/contact.html
@@ -18,16 +18,18 @@ layout: default
 	<a href="https://github.com/rahulbakshee" target="_blank">
         <img src="{{ '/images/logo_github.png' | relative_url }}" />
         </a>
-	<a> </a>
-	<a> </a>
-	<a> </a>
+	
+	<&nbsp>
+	
 	<a href="https://www.linkedin.com/in/rahulbakshee/" target="_blank">
-            <img src="{{ '/images/logo_linkedin.png' | relative_url }}" />
+        <img src="{{ '/images/logo_linkedin.png' | relative_url }}" />
         </a>
-	<a> </a>
+	
+	<&nbsp>
+
 	<a href="https://twitter.com/rahulbakshee" target="_blank">
-            <img src="{{ '/images/logo_twitter.png' | relative_url }}" />
-        </a>
+    	<img src="{{ '/images/logo_twitter.png' | relative_url }}" />
+	</a>
 		
 
   <p></p>
