--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@ layout: default
         <img src="{{ '/images/logo_github.png' | relative_url }}" />
         </a>
 	
-	<&nbsp>
+	&nbsp;
 	
 	<a href="https://www.linkedin.com/in/rahulbakshee/" target="_blank">
         <img src="{{ '/images/logo_linkedin.png' | relative_url }}" />
