--- a/contact.html
+++ b/contact.html
@@ -20,12 +20,14 @@ layout: default
         </a>
 	
 	&nbsp;
+	&nbsp;
 	
 	<a href="https://www.linkedin.com/in/rahulbakshee/" target="_blank">
         <img src="{{ '/images/logo_linkedin.png' | relative_url }}" />
         </a>
 	
-	<&nbsp>
+	&nbsp;
+	&nbsp;
 
 	<a href="https://twitter.com/rahulbakshee" target="_blank">
     	<img src="{{ '/images/logo_twitter.png' | relative_url }}" />
