added medium logo

--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,13 @@ layout: default
 	<a href="https://twitter.com/rahulbakshee" target="_blank">
     	<img src="{{ '/images/logo_twitter.png' | relative_url }}" />
 	</a>
-		
+	
+	&nbsp;
+	&nbsp;
+
+	<a href="https://rahulbakshee.medium.com/" target="_blank">
+    	<img src="{{ '/images/logo_medium.png' | relative_url }}" />
+	</a>
 
   <p></p>
 </div>
