--- a/contact.html
+++ b/contact.html
@@ -3,13 +3,13 @@ layout: default
 ---
 
 <div class='other-pages'>
-	<a><img src="{{ '/images/me.png' | relative_url }}" />
-        </a>
-
+	<a><img src="{{ '/images/me.png' | relative_url }}" /></a>
+	<p> *Brahmatal(Uttarakhand-India) in Jan 2020* </p>
+	
 	<p></p>
-	<p>I am a Data Scientist working on solving real world problems using Machine Learning and Deep Learning. I have a huge interest in Computer Vision. I keep myself busy in learning and implementing new tools and techniques. In the near future I would like to see myself working on some cool projects such as Autonomous Vehicles, consumer applications in Healthcare, .</p>
-	<p>I am a father and a loving husband. I trek a lot and I love travelling. I play badminton on weekends.  </p>
-	<p></p>
+	<p>I am a Data Scientist working on solving real world problems using Machine Learning and Deep Learning. I have a huge interest in Computer Vision. I keep myself busy in learning and implementing new tools and techniques. In the near future I would like to see myself working on some cool projects such as Autonomous Vehicles, consumer applications in Healthcare etc.</p>
+	<p>I am a caring father and a loving husband. I trek a lot and I love travelling. I play badminton on weekends.  </p>
+	<p></p> 
 	<p></p>
 	<p>Contact me if you are doing exciting work and/or recruiting </p>
 	<p></p>
