--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class='other-pages'>
 	<a><img src="{{ '/images/me.png' | relative_url }}" /></a>
-	<p> *Brahmatal(Uttarakhand-India) in Jan 2020* </p>
+	<p> a snap from Brahmatal Trek(Uttarakhand-India) in Jan 2020 </p>
 	
 	<p></p>
 	<p>I am a Data Scientist working on solving real world problems using Machine Learning and Deep Learning. I have a huge interest in Computer Vision. I keep myself busy in learning and implementing new tools and techniques. In the near future I would like to see myself working on some cool projects such as Autonomous Vehicles, consumer applications in Healthcare etc.</p>
