--- a/contact.html
+++ b/contact.html
@@ -40,5 +40,11 @@ layout: default
     	<img src="{{ '/images/logo_medium.png' | relative_url }}" />
 	</a>
 
+	&nbsp;
+	&nbsp;
+
+	<a href="mailto:rahul.bakshee@gmail.com/" target="_blank">
+    	<img src="{{ '/images/logo_mail.png' | relative_url }}" />
+	</a>
   <p></p>
 </div>
