--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@ layout: default
 	&nbsp;
 	&nbsp;
 
-	<a href="mailto:rahul.bakshee@gmail.com/" target="_blank">
+	<a href="https://mail.google.com/mail/?view=cm&fs=1&to=rahul.bakshee@gmail.com" target="_blank">
     	<img src="{{ '/images/logo_mail.png' | relative_url }}" />
 	</a>
   <p></p>
