--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@ layout: default
 	<p> a snap from Brahmatal Trek(Uttarakhand-India) in Jan 2020 </p>
 	
 	<p></p>
-	<p>I am a Data Scientist working on solving real world problems using Machine Learning and Deep Learning. I have a huge interest in Computer Vision. I keep myself busy in learning and implementing new tools and techniques. In the near future I would like to see myself working on some cool projects such as Autonomous Vehicles, consumer applications in Healthcare etc.</p>
+	<p>I am a Data Scientist working on solving real world problems using Machine Learning and Deep Learning. I have a huge interest in Computer Vision. I keep myself busy in learning and implementing new tools and techniques. In the near future I would like to see myself working on some cool projects such as Autonomous Vehicles, Healthcare, consumer applications in Generative Adversarial Networks (GANs) etc.</p>
 	<p>I am a caring father and a loving husband. I trek a lot and I love travelling. I play badminton on weekends.  </p>
 	<p></p> 
 	<p></p>
